Changed Spotify to run first before Deezer. Added additional error handling to both Spotify and Deezer grabbers. If the background service crashes, it will automatically restart. Added release notes page and a new config file to show messages to users on the Landing & Pending pages. DeezerGrabber semaphore slim has been set to 2.

--- a/LastMinutes/LastMinutes.csproj
+++ b/LastMinutes/LastMinutes.csproj
@@ -21,4 +21,11 @@
     <Folder Include="Migrations\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Views\LastMinutes\ReleaseNotes.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
