--- a/LastMinutes/LastMinutes.csproj
+++ b/LastMinutes/LastMinutes.csproj
@@ -15,6 +15,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="System.Net.Ping" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
